# niteCTF-2025

./: README.md
ai/antakshari/: README.md
ai/dill_intentions/: README.md
ai/floating_point_guardian/: README.md
ai/is_this_loss/: README.md
ai/lastnleast/: README.md
ai/the_last_song/: README.md
binex/beating_yellow_king_with_musl_in_ng+/: README.md
binex/ieee_dancer/: README.md
binex/nitebus/: README.md
binex/virtual_rift/: README.md
crypto/hash_vegas/: README.md
crypto/huuge_fan/: README.md
crypto/smol_fan/: README.md
crypto/stronk_rabin/: README.md
crypto/symmetric_starter/: README.md
forensics/google_adsense/: README.md  binarysource.cpp  solve.py
forensics/ir_1_my_clematis/: README.md
forensics/ir_2_wiege/: README.md  main.rs  solve.py
forensics/ir_3_karma/: README.md  capture.pcapng  caret-ware.cpp  solve.py  unintended_solve.py
forensics/ophelias_truth_1/: README.md
forensics/ophelias_truth_2/: README.md  RuntimeBroker.cpp  decrypt_skype.py  potentialkeys.txt
forensics/ophelias_truth_3/: README.md  route.cpp
forensics/quick_mistake/: Chal.pcap  README.md  recovered_sslkeylog.txt  solve_decrypt.py
forensics/quite_oknotok/: README.md  parsecolors.py  parsefrequencies.py
hardware/false_promise/: README.md
hardware/memlock/: README.md
hardware/middle_fingers/: README.md
hardware/powerless/: README.md
osint/Bonsai Bankai/: README.md
osint/Cornfield Chase/: README.md
osint/Hillbilly/: README.md
web3/prisoners-dilemma/challenge/server/: Cargo.toml  flag.txt
web3/prisoners-dilemma/challenge/server/src/: main.rs
(+254 files in other folders)
